# SALT

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
labels/ctorg/: labels.txt  tree-labels.txt
labels/flare22/: labels.txt  tree-labels.txt
labels/lctsc/: labels.txt  tree-labels.txt
labels/luna16lobes/: labels.txt  tree-labels.txt
labels/saros/: labels.txt  tree-labels.txt
labels/saros+totalseg/: labels.txt  tree-labels.txt
labels/word/: labels.txt  tree-labels.txt
models/foobar-31/: config.pkl  model.pt
salt/: __init__.py  dynunet.py  evaluate.py  export.py  input_pipeline.py  module.py  predict.py  train.py
salt/core/: activations.py  adjacency_matrix.py  label_tree.py
salt/core/monai/: loss.py  transforms.py
salt/data/: discovery.py  module.py
salt/data/conversion/: ctorg.py  flare22.py  fuse_saros_totalsegmentator.py  lctsc.py  luna16_lobes.py  saros_resample.py  totalsegmentator_convert.py  totalsegmentator_step1_split_labels.py  totalsegmentator_step2_map_labels.py  utils.py  word.py
salt/utils/: export.py  inference.py  visualization.py
