[tool.poetry]
name = "SALT"
version = "0.1.0"
description = "Softmax for Arbitrary Label Trees (SALT) is a framework for training segmentation networks using conditional probabilities to model hierarchical relationships in the data."
authors = ["SHIP AI <all.shipai@uk-essen.de>"]

[tool.poetry.dependencies]
python = "^3.9"
monai = "^1.0.0"
itk = "^5.2.1"
nibabel = "^3.2.1"
SimpleITK = "^2.1.1"
pydicom = "^2.2.2"
scikit-image = "^0.19.1"
pytorch-lightning = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.14.0"
flake8 = "^3.9.2"
mypy = "^0.910"
black = "^23.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.isort]
profile = "black"
line_length = 88
